<resources>
    <!-- GENERAL -->
    <string name="app_name">BASS</string>
    <string name="app_version">V1.0.1</string>
    <string name="yes">Ja</string>
    <string name="no">Nee</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_MoreInfo">MoreInfoActivity</string>
    <string name="title_activities_card">CardActivity</string>
    <string name="title_activities_profile">ProfileActivity</string>


    <!-- Login Page -->
    <string name="login_toolbar_title"></string>
    <string name="login_welcome_title">Welkom!</string>
    <string name="login_welcome_sub">Om de app te kunnen gaan gebruiken moet je eerst inloggen.</string>
    <string name="login_main_button">Inloggen</string>
    <string name="login_no_account">Nog geen account?</string>
    <string name="login_more_info">Meer info</string>
    <string name="login_leeg_email_bericht">Vul een email in</string>
    <string name="login_verkeerd_email_bericht">Uw email word niet herkend</string>
    <string name="login_leeg_password">Vul uw wachtwoord in</string>
    <string name="login_form_error">Controleer uw gegevens</string>

<<<<<<< HEAD
=======

>>>>>>> b812b8012ff25b322dc6eff052b8f99e81cdc899
    <!-- Welcome Page -->
    <string name="welcome_email_address">Email</string>
    <string name="welcome_password">Wachtwoord</string>
    <string name="empty_text"></string>


    <!-- Meer Info Page-->
    <string name="meerinfo_toolbar_title"></string>
    <string name="meerinfo_geen_account">Geen Account</string>
    <string name="meerinfo_geen_account_text">Het is helaas niet mogelijk om deze app te gebruiken zonder een account. Het is ook niet mogelijk om in de app een account aan te maken.\n\nAlleen jouw werkgever op de Borchwerf die aangesloten is bij onze service kan een account aanvragen voor jou. Daarna kun je inloggen met jouw werk-email en aangeleverde wachtwoord.</string>
    <string name="meerinfo_verkeerde_login">Verkeerde login</string>
    <string name="meerinfo_verkeerde_login_text">Heb je wel een account, maar lukt het niet om in
        te loggen? Helaas kan dit in de app niet opgelost worden. Wij adviseren om bij de HR
        afdeling van jouw bedrijf jouw inloggegevens te verifiëren. Lukt het dan nog niet om
        in te loggen, dan kunnen zij voor jou een nieuw account aanvragen.</string>


    <!-- Home Page -->
    <string name="home_toolbar_title"></string>
    <string name="home_button_aanvragen">Aanvragen</string>
    <string name="home_button_aanvragen_sub">Shuttle vervoer</string>
    <string name="home_button_kaart">KAART</string>
    <string name="home_button_kaart_sub">Bekijk shuttle card</string>

    <string name="home_button_ride_sub">als shuttle arriveert</string>
    <string name="home_button_ride_active">Onderweg</string>
    <string name="home_button_ride_active_sub">naar eindlocatie</string>
    <string name="home_button_checkin">Inchecken</string>
    <string name="home_button_checkout">Uitchecken</string>
    <string name="home_button_checkin_sub">met shuttle card</string>

    <string name="home_checkin_dialog_scan_title">Houd je telefoon\n tegen de scanner</string>

    <string name="home_cancel_ride_title">Aanvraag annuleren</string>
    <string name="home_cancel_ride_sub">Weet je zeker dat je deze rit wilt annuleren?</string>


    <!-- Kaart Page -->
    <string name="kaart_image_description">Voorbeeld kaart van Nikki 2: The Reckoning</string>
    <string name="kaart_record1_voorbeeld"> Station Roosendaal  08:15 23-02-2018</string>
    <string name="kaart_record2_voorbeeld"> Station Roosendaal  18:15 22-02-2018</string>
    <string name="kaart_record3_voorbeeld"> Station Roosendaal  07:45 19-02-2018</string>
    <string name="kaart_geschiedenis">Geschiedenis</string>


    <!-- Request Page -->
    <string name="request_Shuttle">Shuttlebus</string>
    <string name="request_imageBus">Image</string>
    <string name="requestbutton">Aanvragen</string>
    <string name="beginlocation">Ophaal locatie</string>
    <string name="pickupTime">Ophaaltijd</string>
    <string name="eindLocatie">Eind locatie</string>
    <string name="textview">shut 03</string>
    <string name="textview3"> Shuttle bus</string>


    <!-- Profile Page -->
    <string name="profile_toolbar_title"></string>
    <string name="user">Gebruiker</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
