<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/appDefaultBackground">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:elevation="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/layout_home_request"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="15dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/background_home_button"
            android:elevation="8dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="450dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:scaleType="fitStart"
                android:tint="@color/bass_dark_apache"
                app:srcCompat="@drawable/ic_bell" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebasneue_bold"
                android:text="@string/requestbutton"
                android:textColor="@color/bass_grey"
                android:textSize="28sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/home_button_aanvragen_sub"
                android:textColor="@color/bass_grey"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_home_card"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="15dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/background_home_button"
            android:elevation="8dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="450dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:scaleType="fitStart"
                android:tint="@color/bass_dark_apache"
                app:srcCompat="@drawable/ic_card" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebasneue_bold"
                android:text="@string/home_button_kaart"
                android:textColor="@color/bass_grey"
                android:textSize="28sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/home_button_kaart_sub"
                android:textColor="@color/bass_grey"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_home_current_ride"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="15dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/background_home_button_active"
            android:elevation="8dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:visibility="gone"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="450dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:scaleType="fitStart"
                android:tint="@color/appDefaultBackground"
                app:srcCompat="@drawable/ic_clock" />

            <TextView
                android:id="@+id/textview_home_ride_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebasneue_bold"
                android:text="@string/home_button_aanvragen"
                android:textColor="@color/appDefaultBackground"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textview_home_ride_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/home_button_ride_sub"
                android:textColor="@color/appDefaultBackground"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_home_checkin"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="15dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/background_home_button"
            android:elevation="8dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:visibility="gone"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="450dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:scaleType="fitStart"
                android:tint="@color/bass_dark_apache"
                app:srcCompat="@drawable/ic_wifi" />

            <TextView
                android:id="@+id/textview_home_checkin_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebasneue_bold"
                android:text="@string/home_button_checkin"
                android:textColor="@color/bass_grey"
                android:textSize="28sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/home_button_checkin_sub"
                android:textColor="@color/bass_grey"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="-30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.mapbox.mapboxsdk.maps.MapView>

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="6dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="-10dp"
        android:background="@drawable/background_card"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>