<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageKaart"
        android:layout_width="wrap_content"
        android:layout_height="267dp"
        android:contentDescription="@string/kaart_image_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kaart" />

    <ScrollView
        android:layout_width="395dp"
        android:layout_height="448dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/imageKaart"
        app:layout_constraintTop_toBottomOf="@+id/imageKaart">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/kaartViewRecord1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kaart_record1_voorbeeld"
                android:textSize="26sp"/>

            <TextView
                android:id="@+id/kaartViewRecord2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kaart_record2_voorbeeld"
                android:textSize="26sp"/>

            <TextView
                android:id="@+id/kaartViewRecord3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kaart_record3_voorbeeld"
                android:textSize="26sp"/>

            <TextView
                android:id="@+id/kaartViewRecord4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kaart_record1_voorbeeld"
                android:textSize="26sp"/>

            <TextView
                android:id="@+id/kaartViewRecord5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kaart_record2_voorbeeld"
                android:textSize="26sp"/>

            <TextView
                android:id="@+id/kaartViewRecord6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kaart_record3_voorbeeld"
                android:textSize="26sp"/>

            <TextView
                android:id="@+id/kaartViewRecord7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kaart_record1_voorbeeld"
                android:textSize="26sp"/>

            <TextView
                android:id="@+id/kaartViewRecord8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kaart_record2_voorbeeld"
                android:textSize="26sp"/>

            <TextView
                android:id="@+id/kaartViewRecord9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kaart_record3_voorbeeld"
                android:textSize="26sp"/>

            <TextView
                android:id="@+id/kaartViewRecord10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kaart_record1_voorbeeld"
                android:textSize="26sp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>